--- a/2TP/BlazorApp1/BlazorApp1/Pages/Tareas/ListadoTareas.razor
+++ b/2TP/BlazorApp1/BlazorApp1/Pages/Tareas/ListadoTareas.razor
@@ -1,7 +1,6 @@
 ﻿@page "/Tareas/ListadoTareas"
 @using BlazorApp1.Data
 @inject TareasService TareasService
-@inject RecursosService RecursosService
 @inject NavigationManager navigation
 @inject IJSRuntime JsRuntime
 
@@ -13,63 +12,58 @@
 
 @if (tareas == null)
 {
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Titulo</th>
-                <th>Vencimiento</th>
-                <th>Estimacion</th>
-                <th>Recurso</th>
-                <th>Estado</th>
-                <th>Acciones</th>
-
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var tarea in tareas)
+<p><em>Loading...</em></p> }
+            else
             {
-            <tr>
-                <td>@tarea.Id</td>
-                <td>@tarea.Titulo</td>
-                <td>@tarea.Vencimiento</td>
-                <td>@tarea.Estimacion</td>
-                <td>@tarea.Responsable.Id</td>
-                <td>@tarea.Estado</td>
-                <td>
-                    <button class="btn btn-info" @onclick="()=>Editar(tarea.Id)">Editar</button>
-                    <button class="btn btn-danger" @onclick="()=>Borrar(tarea.Id)">Borrar</button>
-                </td>
-            </tr>
-            }
-        </tbody>
-    </table>
-}
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Titulo</th>
+            <th>Vencimiento</th>
+            <th>Estimacion</th>
+            <th>Recurso</th>
+            <th>Estado</th>
+            <th>Acciones</th>
 
-@code {
-    private List<BlazorApp1.Data.Tareas> tareas;
-
-    protected override async Task OnInitializedAsync()
-    {
-        tareas = await TareasService.ListTask();
-    }
-
-    protected void Editar(int id)
-    {
-        navigation.NavigateTo("Tareas/Editar/" + id);
-    }
-
-    async Task Borrar(int id)
-    {
-        bool confirmed = await JsRuntime.InvokeAsync<bool>("confirm", "Desea elimiar la Tarea?");
-        if (confirmed)
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var tarea in tareas)
         {
-            await TareasService.DeleteTask(id);
-            tareas = await TareasService.ListTask();
-        }
-    }
-}
+<tr>
+    <td>@tarea.Id</td>
+    <td>@tarea.Titulo</td>
+    <td>@tarea.Vencimiento</td>
+    <td>@tarea.Estimacion</td>
+    <td>@tarea.Responsable.Nombre</td>
+    <td>@tarea.Estado</td>
+    <td>
+        <button class="btn btn-info" @onclick="()=>Editar(tarea.Id)">Editar</button>
+        <button class="btn btn-danger" @onclick="()=>Borrar(tarea.Id)">Borrar</button>
+    </td>
+</tr>}
+    </tbody>
+</table>}
+
+@code { private List<BlazorApp1.Data.Tareas> tareas;
+
+            protected override async Task OnInitializedAsync()
+            {
+                tareas = await TareasService.ListTask();
+            }
+
+            protected void Editar(int id)
+            {
+                navigation.NavigateTo("Tareas/Editar/" + id);
+            }
+
+            async Task Borrar(int id)
+            {
+                bool confirmed = await JsRuntime.InvokeAsync<bool>("confirm", "Desea elimiar la Tarea?");
+                if (confirmed)
+                {
+                    await TareasService.DeleteTask(id);
+                    tareas = await TareasService.ListTask();
+                }
+            } }
