--- a/2TP/BlazorApp1/BlazorApp1/Pages/Usuarios/Editar.razor
+++ b/2TP/BlazorApp1/BlazorApp1/Pages/Usuarios/Editar.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Usuarios/editar/{id:int}"
 @using BlazorApp1.Data
-@inject UsuariosService Usuariosservice
+@inject UsuariosService service
 @inject NavigationManager navigation
 
 <EditForm Model="@Modelo" OnValidSubmit="@Guardar">
@@ -33,7 +33,7 @@
     {
         if (Id > 0)
         {
-            Modelo = await Usuariosservice.SelectUser(Id);
+            Modelo = await service.SelectUser(Id);
         }
         else
         {
@@ -44,7 +44,7 @@
 
     private async void Guardar()
     {
-        await Usuariosservice.SaveUser(Modelo); 
+        await service.SaveUser(Modelo); 
         navigation.NavigateTo("Usuarios/ListadoUsuarios");
     }
 }
